--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework==3.12.4
 gunicorn==20.1.0
 Pillow==8.2.0
 psycopg2==2.8.6
+python-decouple==3.4
 pytz==2021.1
 soupsieve==2.2.1
 sqlparse==0.4.1
