--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ MODE='prod'
 ALLOWED_HOSTS='.localhost','.herokuapp.com','.127.0.0.1'
 DISABLE_COLLECTSTATIC=1
 EMAIL_USE_TLS='True'
-EMAIL_HOST=shamsodarwish@gmail.com
-EMAIL_PORT= 587
+EMAIL_HOST='shamsodarwish@gmail.com'
+EMAIL_PORT='587'
 EMAIL_HOST_USER='saaraabdi@gmail.com'
-EMAIL_HOST_PASSWORD =shaam232018
+EMAIL_HOST_PASSWORD='shaam232018'
 
